# openscreen

./: CONTRIBUTING.md  README.md  electron-builder.json5  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml
electron/: electron-env.d.ts  main.ts  preload.ts
electron/ipc/: handlers.ts
electron/native-bridge/cursor/recording/: telemetryRecordingSession.ts
electron/native/pipewire-capture/: CMakeLists.txt
electron/native/pipewire-capture/src/: main.c
electron/native/wgc-capture/: CMakeLists.txt
scripts/: build-linux-pipewire-helper.mjs  build-windows-wgc-helper.mjs  fetch-caption-model.mjs
src/components/launch/: LaunchWindow.tsx
src/components/video-editor/: CustomGradientBuilder.tsx  SettingsPanel.tsx  VideoEditor.tsx  VideoPlayback.tsx  projectPersistence.ts  types.ts
src/components/video-editor/timeline/: Item.tsx  Row.tsx  TimelineEditor.tsx
src/components/video-editor/videoPlayback/: layoutUtils.ts
src/hooks/: useEditorHistory.ts  useScreenRecorder.ts
src/i18n/locales/ar/: shortcuts.json  timeline.json
src/i18n/locales/en/: editor.json  shortcuts.json  timeline.json
src/i18n/locales/es/: shortcuts.json  timeline.json
src/i18n/locales/fr/: shortcuts.json  timeline.json
src/i18n/locales/it/: shortcuts.json  timeline.json
src/i18n/locales/ja-JP/: shortcuts.json  timeline.json
src/i18n/locales/ko-KR/: shortcuts.json  (+1 more)
src/lib/: nativeLinuxRecording.ts  shortcuts.ts  wallpaper.ts
src/lib/cursor/: cursorThemes.ts
src/lib/exporter/: frameRenderer.ts  gifExporter.ts  videoExporter.ts
(+12 files in other folders)
